# deal-solver

./: .drone.star  .gitignore  README.md  Taskfile.yml  pyproject.toml  setup.cfg
deal_solver/: __init__.py  _annotations.py  _ast.py  _cached_property.py  _context.py  _eval_contracts.py  _eval_expr.py  _eval_stmt.py  _exceptions.py  _goal.py  _model.py  _registry.py  _theorem.py  _transformer.py  _types.py
deal_solver/_context/: __init__.py  _asserts.py  _context.py  _exceptions.py  _layer.py  _scope.py  _trace.py
deal_solver/_funcs/: __init__.py  _builtins.py  _list.py  _math.py  _os_path.py  _random.py  _re.py  _registry.py
deal_solver/_proxies/: __init__.py  _bool.py  _dict.py  _float.py  _func.py  _funcs.py  _int.py  _lambda.py  _list.py  _method.py  _methods.py  _pattern.py  _proxy.py  _registry.py  _set.py  _str.py  _type_factory.py  _type_info.py  _var_tuple.py
tests/: conftest.py  helpers.py  test_annotations.py  test_ast.py  test_context.py  test_exceptions.py  test_expr.py  test_if.py  test_model.py  test_post.py  test_pre.py  test_stdlib.py  test_stmt.py  test_subcalls.py  test_theorem.py  test_type_errors.py  test_unsupported.py
tests/test_contracts/: test_ensure.py  test_post.py  test_pre.py  test_raises.py
tests/test_stdlib/: test_math.py  test_os_path.py  test_random.py  test_re.py
tests/test_types/: test_bool.py  test_dict.py  test_float.py  test_int.py  test_list.py  test_set.py  test_str.py  test_tuple.py
