[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"


[tool.isort]
line_length = 90
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
skip = "venvs/"
multi_line_output = 5
include_trailing_comma = true

import_heading_stdlib = "stdlib"
import_heading_thirdparty = "external"
import_heading_firstparty = "project"
import_heading_localfolder = "app"


[tool.pytest.ini_options]
addopts = [
    "--cov=deal_solver",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=96",
]


[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "pass",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]


[tool.flit.metadata]
module = "deal_solver"
dist-name = "deal-solver"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/life4/deal-solver"
description-file = "README.md"
requires-python = ">=3.6"
keywords = "deal,contracts,verification"

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

requires = [
    "astroid",
    "z3-solver",
]

[tool.flit.metadata.requires-extra]
tests = [
    "hypothesis",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
