[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "deal_solver"
dist-name = "deal-solver"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/life4/deal-solver"
description-file = "README.md"
requires-python = ">=3.6"
keywords = "deal,contracts,verification"

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

requires = [
    "astroid",
    "z3-solver",
]

[tool.flit.metadata.requires-extra]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
lint = [
    "flake8",
    "flake8-bugbear",
    "flake8-commas",
    "flake8-quotes",
    "isort",
    "mypy>=0.910",
]

[tool.isort]
line_length = 90
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
skip = "venvs/"
multi_line_output = 5
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = [
    "--cov=deal_solver",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "    pass",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "raise RuntimeError.+unreachable.+",
]

[tool.mypy]
files = ["./deal_solver", "tests"]
check_untyped_defs = true
# disallow_untyped_decorators = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
